--- a/new_citations/SD.bib
+++ b/new_citations/SD.bib
@@ -453,7 +453,7 @@ keywords = {Cyber-physical systems, security, cyber attack detection, discrete e
 abstract = {With the rapid growth of cyber-physical systems (CPS), the requirements on the security of such systems increases, since the communication networks between the controllers, actuators and sensors are vulnerable to attacks. In this paper, a detection method for cyber attacks on CPSs modeled by discrete event systems is proposed. Deception attacks hide their influence and are particular challenging to detect. Two such attacks are replay attack and covert attack. The modeling and detection of these two attack types is presented. We introduce permutation matrices which alter the transmitted signals to disrupt the attack and allow the detection. The proposed approach is illustrated by a laboratory manufacturing system.}
 }
 @article{YANG2021328,
-title = {Opacity of networked discrete event systems},
+title = {Opacity of networked discrete event systems (2021)},
 journal = {Information Sciences},
 volume = {543},
 pages = {328-344},
