--- a/new_citations/WOS.bib
+++ b/new_citations/WOS.bib
@@ -883,7 +883,7 @@ DA = {2022-07-06},
 
 @article{ WOS:000293417000009,
 Author = {Saboori, Anooshiravan and Hadjicostis, Christoforos N.},
-Title = {Verification of K-Step Opacity and Analysis of Its Complexity},
+Title = {Verification of $K$-Step Opacity and Analysis of Its Complexity (2011)},
 Journal = {IEEE TRANSACTIONS ON AUTOMATION SCIENCE AND ENGINEERING},
 Year = {2011},
 Volume = {8},
@@ -4175,7 +4175,7 @@ DA = {2022-07-06},
 
 @article{ WOS:000431533300007,
 Author = {Keroglou, Christoforos and Hadjicostis, Christoforos N.},
-Title = {Probabilistic system opacity in discrete event systems},
+Title = {Probabilistic system opacity in discrete event systems (2018)},
 Journal = {DISCRETE EVENT DYNAMIC SYSTEMS-THEORY AND APPLICATIONS},
 Year = {2018},
 Volume = {28},
@@ -7818,7 +7818,7 @@ DA = {2022-07-06},
 
 @article{ WOS:000522918700005,
 Author = {Yin, Xiang and Li, Shaoyuan},
-Title = {Synthesis of Dynamic Masks for Infinite-Step Opacity},
+Title = {Synthesis of Dynamic Masks for Infinite-Step Opacity (2020)},
 Journal = {IEEE TRANSACTIONS ON AUTOMATIC CONTROL},
 Year = {2020},
 Volume = {65},
@@ -9062,7 +9062,7 @@ DA = {2022-07-06},
 
 @article{ WOS:000590678400020,
 Author = {Yang, Jingkai and Deng, Weilin and Qiu, Daowen and Jiang, Cheng},
-Title = {Opacity of networked discrete event systems},
+Title = {Opacity of networked discrete event systems (2021)},
 Journal = {INFORMATION SCIENCES},
 Year = {2021},
 Volume = {543},
