--- a/new_citations/ieeexplore.bib
+++ b/new_citations/ieeexplore.bib
@@ -11,19 +11,6 @@ keywords={Command and control systems;Object oriented modeling;Petri nets;Milita
 doi={10.1109/ICSMC.1995.538322},
 ISSN={},
 month={Oct},}
-@INPROCEEDINGS{538322,
-author={Zhou, MengChu and Wang, D.T. and Mayk, I.},
-booktitle={1995 IEEE International Conference on Systems, Man and Cybernetics. Intelligent Systems for the 21st Century},
-title={Design of Petri net objects and their application in command and control systems},
-year={1995},
-volume={4},
-number={},
-pages={3463-3468 vol.4},
-abstract={This paper discusses how to use object-oriented technology and Petri nets for the modeling of military maneuver theory. Most military theories involve both concurrent processing units and discrete event systems. These can be best modeled with Petri nets. The maneuver theory includes preemption, dislocation, and disruption. Among them, dislocation plays a central role. The authors use Petri nets to model the dislocation strategy and, further, the combined-arms theory, which is an extension of the dislocation theory. Each attacking, moving, and defending unit is modeled as an object whose operation is represented as a subnet. Simulation can also be done with the appropriate integration of these Petri net submodels.},
-keywords={Command and control systems;Object oriented modeling;Petri nets;Military computing;Discrete event systems;System analysis and design;Context modeling;Decision making;Power system modeling;Application software},
-doi={10.1109/ICSMC.1995.538322},
-ISSN={},
-month={Oct},}
 @ARTICLE{954656,
 author={Yongseok Park},
 journal={IEEE Potentials},
@@ -222,7 +209,7 @@ month={Dec},}
 @ARTICLE{5710598,
 author={Saboori, Anooshiravan and Hadjicostis, Christoforos N.},
 journal={IEEE Transactions on Automation Science and Engineering},
-title={Verification of $K$-Step Opacity and Analysis of Its Complexity},
+title={Verification of $K$-Step Opacity and Analysis of Its Complexity (2011)},
 year={2011},
 volume={8},
 number={3},
@@ -1067,7 +1054,7 @@ month={Dec},}
 @ARTICLE{8715470,
 author={Yin, Xiang and Li, Shaoyuan},
 journal={IEEE Transactions on Automatic Control},
-title={Synthesis of Dynamic Masks for Infinite-Step Opacity},
+title={Synthesis of Dynamic Masks for Infinite-Step Opacity (2020)},
 year={2020},
 volume={65},
 number={4},
@@ -1367,7 +1354,7 @@ month={July},}
 @ARTICLE{9627634,
 author={Xie, Yifan and Yin, Xiang and Li, Shaoyuan},
 journal={IEEE Transactions on Automatic Control},
-title={Opacity Enforcing Supervisory Control using Non-deterministic Supervisors},
+title={Opacity Enforcing Supervisory Control using Non-deterministic Supervisors (2021)},
 year={2021},
 volume={},
 number={},
