--- a/new_citations/scopus.bib
+++ b/new_citations/scopus.bib
@@ -900,7 +900,7 @@ source={Scopus},
 
 @ARTICLE{Yang2021328,
 author={Yang, J. and Deng, W. and Qiu, D. and Jiang, C.},
-title={Opacity of networked discrete event systems},
+title={Opacity of networked discrete event systems (2021)},
 journal={Information Sciences},
 year={2021},
 volume={543},
@@ -1080,7 +1080,7 @@ source={Scopus},
 
 @ARTICLE{Xie2021,
 author={Xie, Y. and Yin, X. and Li, S.},
-title={Opacity Enforcing Supervisory Control using Non-deterministic Supervisors},
+title={Opacity Enforcing Supervisory Control using Non-deterministic Supervisors (2021)},
 journal={IEEE Transactions on Automatic Control},
 year={2021},
 doi={10.1109/TAC.2021.3131125},
@@ -1384,7 +1384,7 @@ source={Scopus},
 
 @ARTICLE{Yin20201429,
 author={Yin, X. and Li, S.},
-title={Synthesis of Dynamic Masks for Infinite-Step Opacity},
+title={Synthesis of Dynamic Masks for Infinite-Step Opacity (2020)},
 journal={IEEE Transactions on Automatic Control},
 year={2020},
 volume={65},
@@ -2765,7 +2765,7 @@ source={Scopus},
 
 @ARTICLE{Keroglou2018289,
 author={Keroglou, C. and Hadjicostis, C.N.},
-title={Probabilistic system opacity in discrete event systems},
+title={Probabilistic system opacity in discrete event systems (2018)},
 journal={Discrete Event Dynamic Systems: Theory and Applications},
 year={2018},
 volume={28},
@@ -4019,7 +4019,7 @@ source={Scopus},
 
 @ARTICLE{Saboori2011549,
 author={Saboori, A. and Hadjicostis, C.N.},
-title={Verification of K-step opacity and analysis of its complexity},
+title={Verification of $K$-step opacity and analysis of its complexity (2011)},
 journal={IEEE Transactions on Automation Science and Engineering},
 year={2011},
 volume={8},
