--- a/new_citations/complementary.bib
+++ b/new_citations/complementary.bib
@@ -1,5 +1,13 @@
 % NON-INTERFERENCE
-
+@INPROCEEDINGS{4434515,
+  author={Saboori, Anooshiravan and Hadjicostis, Christoforos N.},
+  booktitle={2007 46th IEEE Conference on Decision and Control},
+  title={Notions of security and opacity in discrete event systems},
+  year={2007},
+  volume={},
+  number={},
+  pages={5056-5061},
+  doi={10.1109/CDC.2007.4434515}}
 @INPROCEEDINGS{8618931,
   author={Basile, Francesco and De Tommasi, Gianmaria and Sterle, Claudio},
   booktitle={2018 IEEE Conference on Decision and Control (CDC)},
