--- a/new_citations/ieeexplore.bib
+++ b/new_citations/ieeexplore.bib
@@ -1663,3 +1663,13 @@ keywords={},
 doi={10.1109/ACC.2005.1469884},
 ISSN={2378-5861},
 month={June},}
+@INPROCEEDINGS{9837143,
+  author={Basile, Francesco and Tommasi, Gianmaria De and Motta, Carlo and Petrillo, Alberto and Santini, Stefania},
+  booktitle={2022 30th Mediterranean Conference on Control and Automation (MED)},
+  title={Assessment of Initial-State-Opacity in Live Bounded and Reversible Discrete Event Systems via Integer Linear Programming},
+  year={2022},
+  volume={},
+  number={},
+  pages={994-999},
+  doi={10.1109/MED54222.2022.9837143}}
+@ARTICLE{9832521,  author={Tai, Ruochen and Lin, Liyong and Zhu, Yuting and Su, Rong},  journal={IEEE Transactions on Automatic Control},   title={Synthesis of the Supremal Covert Attacker Against Unknown Supervisors by Using Observations},   year={2022},  volume={},  number={},  pages={1-16},  doi={10.1109/TAC.2022.3191393}}
