--- a/new_citations/scopus.bib
+++ b/new_citations/scopus.bib
@@ -2938,6 +2938,7 @@ issn={24058963},
 language={English},
 document_type={Conference Paper},
 source={Scopus},
+journal = {{IFAC}-{PapersOnLine}}
 }
 
 @CONFERENCE{Barcelos2018100,
@@ -2959,6 +2960,7 @@ issn={24058963},
 language={English},
 document_type={Conference Paper},
 source={Scopus},
+journal = {{IFAC}-{PapersOnLine}}
 }
 
 @CONFERENCE{Lima2018179,
@@ -2966,6 +2968,7 @@ author={Lima, P.M. and Carvalho, L.K. and Moreira, M.V.},
 title={Detectable and Undetectable Network Attack Security of Cyber-physical Systems},
 year={2018},
 volume={51},
+journal = {IFAC-PapersOnLine},
 number={7},
 pages={179-185},
 doi={10.1016/j.ifacol.2018.06.298},
@@ -3001,6 +3004,7 @@ issn={24058963},
 language={English},
 document_type={Conference Paper},
 source={Scopus},
+journal = {{IFAC}-{PapersOnLine}}
 }
 
 @CONFERENCE{Basile2018329,
@@ -3022,6 +3026,7 @@ issn={24058963},
 language={English},
 document_type={Conference Paper},
 source={Scopus},
+journal = {{IFAC}-{PapersOnLine}}
 }
 
 @ARTICLE{Agarwal2017792,
@@ -3091,6 +3096,7 @@ issn={24058963},
 language={English},
 document_type={Conference Paper},
 source={Scopus},
+journal = {{IFAC}-{PapersOnLine}}
 }
 
 @CONFERENCE{Sasaki201715247,
