--- a/new_citations/complementary.bib
+++ b/new_citations/complementary.bib
@@ -1,4 +1,4 @@
-% NON-INTERFERENCE
+% OPACITY
 @INPROCEEDINGS{4434515,
   author={Saboori, Anooshiravan and Hadjicostis, Christoforos N.},
   booktitle={2007 46th IEEE Conference on Decision and Control},
@@ -8,6 +8,39 @@
   number={},
   pages={5056-5061},
   doi={10.1109/CDC.2007.4434515}}
+
+% SECRET PROTECTION WITH MINIMUM COSTS
+  @INPROCEEDINGS{9029212,
+  author={Matsui, Shoma and Cai, Kai},
+  booktitle={2019 IEEE 58th Conference on Decision and Control (CDC)},
+  title={Secret Securing with Multiple Protections and Minimum Costs},
+  year={2019},
+  volume={},
+  number={},
+  pages={7635-7640},
+  doi={10.1109/CDC40024.2019.9029212}}
+
+    @article{matsui2021application,
+  title={Application of supervisory control to secret protection in discrete-event systems},
+  author={Matsui, Shoma and Cai, Kai},
+  journal={Journal of the Society of Instrument and Control Engineers (SICE)},
+  volume={60},
+  number={1},
+  pages={14--20},
+  year={2021}
+}
+
+  @INPROCEEDINGS{9867508,
+  author={Jiang, Jiagang and Ma, Ziyue and Cai, Kai},
+  booktitle={2022 American Control Conference (ACC)},
+  title={Secret Protections in Discrete-Event Systems with Minimum Costs},
+  year={2022},
+  volume={},
+  number={},
+  pages={3740-3745},
+  doi={10.23919/ACC53348.2022.9867508}}
+
+% NON-INTERFERENCE
 @INPROCEEDINGS{8618931,
   author={Basile, Francesco and De Tommasi, Gianmaria and Sterle, Claudio},
   booktitle={2018 IEEE Conference on Decision and Control (CDC)},
