--- a/new_citations/complementary.bib
+++ b/new_citations/complementary.bib
@@ -9,6 +9,8 @@
   pages={5056-5061},
   doi={10.1109/CDC.2007.4434515}}
 
+@ARTICLE{6032729,  author={Saboori, Anooshiravan and Hadjicostis, Christoforos N.},  journal={IEEE Transactions on Automatic Control},   title={Opacity-Enforcing Supervisory Strategies via State Estimator Constructions},   year={2012},  volume={57},  number={5},  pages={1155-1165},  doi={10.1109/TAC.2011.2170453}}
+
 % SECRET PROTECTION WITH MINIMUM COSTS
   @INPROCEEDINGS{9029212,
   author={Matsui, Shoma and Cai, Kai},
