--- a/citations_2023/ieeexplore.bib
+++ b/citations_2023/ieeexplore.bib
@@ -97,3 +97,30 @@ volume={7},
 number={},
 pages={1087-1092},
 doi={10.1109/LCSYS.2022.3230770}}
+@INPROCEEDINGS{10070628,
+author={Souid, Nour Elhouda and Klai, Kais and Abid, Chiheb Ameur and Ahmed, Samir Ben},
+booktitle={2022 IEEE Intl Conf on Parallel & Distributed Processing with Applications, Big Data & Cloud Computing, Sustainable Computing & Communications, Social Computing & Networking (ISPA/BDCloud/SocialCom/SustainCom)},
+title={Optimal Supervisory Control of Opacity for Modular Systems},
+year={2022},
+volume={},
+number={},
+pages={854-861},
+doi={10.1109/ISPA-BDCloud-SocialCom-SustainCom57177.2022.00114}}
+@INPROCEEDINGS{9993023,
+author={Han, Xiaoguang and Zhang, Kuize and Li, Zhiwu},
+booktitle={2022 IEEE 61st Conference on Decision and Control (CDC)},
+title={Verification of Strong K-Step Opacity for Discrete-Event Systems},
+year={2022},
+volume={},
+number={},
+pages={4250-4255},
+doi={10.1109/CDC51059.2022.9993023}}
+@INPROCEEDINGS{9992505,
+author={Su, Rong},
+booktitle={2022 IEEE 61st Conference on Decision and Control (CDC)},
+title={About Existence of Resilient Supervisors against Smart Sensor Attacks},
+year={2022},
+volume={},
+number={},
+pages={4263-4269},
+doi={10.1109/CDC51059.2022.9992505}}
