exclude non-fifo channels

--- a/citations_FULL/scopus.bib
+++ b/citations_FULL/scopus.bib
@@ -1175,8 +1175,8 @@ document_type={Article},
 source={Scopus},
 }
 
-@ARTICLE{Meira-Góes2020,
-author={Meira-Góes, R. and Kang, E. and Kwong, R.H. and Lafortune, S.},
+@ARTICLE{Meira-Goes2020,
+author={Meira-Goes, R. and Kang, E. and Kwong, R.H. and Lafortune, S.},
 title={Synthesis of sensor deception attacks at the supervisory layer of Cyber–Physical Systems},
 journal={Automatica},
 year={2020},
@@ -1295,8 +1295,8 @@ document_type={Conference Paper},
 source={Scopus},
 }
 
-@CONFERENCE{Meira-Góes20201776,
-author={Meira-Góes, R. and Keroglou, C. and Lafortune, S.},
+@CONFERENCE{Meira-Goes20201776,
+author={Meira-Goes, R. and Keroglou, C. and Lafortune, S.},
 title={Towards probabilistic intrusion detection in supervisory control of discrete event systems},
 journal={IFAC-PapersOnLine},
 year={2020},
@@ -1323,8 +1323,8 @@ document_type={Conference Paper},
 source={Scopus},
 }
 
-@CONFERENCE{Meira-Góes2020317,
-author={Meira-Góes, R. and Lafortune, S.},
+@CONFERENCE{Meira-Goes2020317,
+author={Meira-Goes, R. and Lafortune, S.},
 title={Moving Target Defense based on Switched Supervisory Control: A New Technique for Mitigating Sensor Deception Attacks},
 journal={IFAC-PapersOnLine},
 year={2020},
@@ -1339,7 +1339,7 @@ source={Scopus},
 }
 
 @CONFERENCE{Wang202035,
-author={Wang, Z.Y. and Meira-Góes, R. and Lafortune, S. and Kwong, R.H.},
+author={Wang, Z.Y. and Meira-Goes, R. and Lafortune, S. and Kwong, R.H.},
 title={Mitigation of Classes of Attacks using a Probabilistic Discrete Event System Framework},
 journal={IFAC-PapersOnLine},
 year={2020},
@@ -2154,8 +2154,8 @@ document_type={Conference Paper},
 source={Scopus},
 }
 
-@CONFERENCE{Góes20184224,
-author={Góes, R.M. and Kang, E. and Kwong, R. and Lafortune, S.},
+@CONFERENCE{Goes20184224,
+author={Goes, R.M. and Kang, E. and Kwong, R. and Lafortune, S.},
 title={Stealthy deception attacks for cyber-physical systems},
 journal={2017 IEEE 56th Annual Conference on Decision and Control, CDC 2017},
 year={2018},
@@ -2382,7 +2382,7 @@ document_type={Article},
 source={Scopus},
 }
 
-@ARTICLE{Belamarić20171,
+@ARTICLE{Belamaric20171,
 author={Belamarić, G. and Kezić, D.},
 title={Modelling and simulating pirate attacks by using hybrid time petri nets [Modeliranje i simuliranje piratskih napada uz pomoć hibridnih vremenskih Petrijevih mreža]},
 journal={Nase More},
@@ -2629,7 +2629,7 @@ document_type={Article},
 source={Scopus},
 }
 
-@ARTICLE{Hélouët2014353,
+@ARTICLE{Helouet2014353,
 author={Hélouët, L. and Marchand, H. and Genest, B. and Gazagnaire, T.},
 title={Diagnosis from scenarios},
 journal={Discrete Event Dynamic Systems: Theory and Applications},
@@ -3459,8 +3459,8 @@ EXPORT DATE: 02 August 2023
 	note = {Cited by: 0}
 }
 
-@ARTICLE{Meira-Góes2023,
-	author = {Meira-Góes, Rômulo and Marchand, Hervé and Lafortune, Stéphane},
+@ARTICLE{Meira-Goes2023,
+	author = {Meira-Goes, Rômulo and Marchand, Hervé and Lafortune, Stéphane},
 	title = {Dealing with sensor and actuator deception attacks in supervisory control},
 	year = {2023},
 	journal = {Automatica},
