--- a/citations_FULL/complementary.bib
+++ b/citations_FULL/complementary.bib
@@ -85,6 +85,27 @@ author = {Feng Lin},
 keywords = {Opacity, Discrete event systems, Anonymity, Secrecy, Observability, Diagnosability, Detectability},
 abstract = {In this paper, we investigate opacity of discrete event systems. We define two types of opacities: strong opacity and weak opacity. Given a general observation mapping, a language is strongly opaque if all strings in the language are confused with some strings in another language and it is weakly opaque if some strings in the language are confused with some strings in another language. We show that security and privacy of computer systems and communication protocols can be investigated in terms of opacity. In particular, two important properties in security and privacy, namely anonymity and secrecy, can be studied as special cases of opacity. We also show that by properly specifying the languages and the observation mapping, three important properties of discrete event systems, namely observability, diagnosability, and detectability, can all be reformulated as opacity. Thus, opacity has a wide range of applications. Also in this paper we provide algorithms for checking strong opacity and weak opacity for systems described by regular languages and having a generalized projection as the observation mapping.}
 }
+@INPROCEEDINGS{Oliveira2023,
+  author={Oliveira, Samuel and Leal, André B. and Teixeira, Marcelo and Lopes, Yuri K.},
+  booktitle={11th International Conference on Information Technology (ICIT) 2023, Accepted},
+  title={Security of Cyber-Physical Systems Against Actuator Attacks Through Cryptography},
+  year={2023},
+  volume={},
+  number={},
+}
+@article{Falcone2014,
+  doi = {10.1007/s10626-014-0196-4},
+  url = {https://doi.org/10.1007/s10626-014-0196-4},
+  year = {2014},
+  month = jul,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {25},
+  number = {4},
+  pages = {531--570},
+  author = {Yli{\`{e}}s Falcone and Herv{\'{e}} Marchand},
+  title = {Enforcement and validation (at runtime) of various notions of opacity},
+  journal = {Discrete Event Dynamic Systems}
+}
 
 @ARTICLE{5404357,
   author={Dubreil, Jérémy and Darondeau, Philippe and Marchand, Hervé},
